2005-09-09  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net-acceptors.ads, aws-net-acceptors.adb:
	Candidate package for help dramatically increase number of simulteneous
	 keep-alive connections.

2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net.ads
	(Bind): Fix comment.

	* aws-net-ssl.adb:
	(Set_FD): Do not try to reuse allocated SSL handle. It is dangerouse,
	 because it could be deallocated or reused in the socket copy.

	* aws-net.adb:
	(Set_Cache): Do not try to reuse allocated cache. It is dangerouse,
	 because it could be deallocated or reused in the socket copy.
	(Free): Do not need call to Release_Cache in the Free (Socket_Access).
	 It is in the Free (Socket_Type) routine.

	* aws-server.adb:
	(Accept_Socket_Serialized): Do not Free socket on shutdown.
	 It was not allocated. Always accept non-SSL socket, and make SSL socket
	 after semaphore release. This would move potentially long blocking operation
	 out of critical section.

	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
	(Remove_Socket): One more Remove_Socket routine.
	(Is_Read_Ready): One more Is_Read_Ready routine.
	(Is_Error): Fix typo Set.LAst instead of Index.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net.ads, aws-net-std.ads:
	(Peer_Port): New routine.

	* aws-net.adb:
	(Socket_Pair): Be shure that S1 and S2 are connected together.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net.ads:
	(Get_Port): New abstract routine.
	(Socket_Pair): New routine.
	(Bind): Add comment about 0 value in Port parameter.

	* aws-net.adb, aws-net-ssl.ads, aws-net-ssl.adb:
	(Socket_Pair): New routine.

	* aws-net-std.ads:
	(Get_Port): New routine.

2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-log.ads, aws-log.adb:
	(Write): Type of Content_Length parameter is Response.Content_Length_Type.
	 Do not try to show Undefined_Length in log file, Constraint_Error would
	 occur. ??? Maybe we should write something in this case.