@@ -1,3 +1,8 @@
+2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net-acceptors.adb:
+	Remove debug output.
+
 2005-09-09  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-net-acceptors.ads, aws-net-acceptors.adb:
